// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Ordered list Default renders correctly 1`] = `
<test>
  <ol
    class="ecl-ordered-list"
  >
    <li
      class="ecl-ordered-list__item"
    >
      Jobs, growth and investment
      <ol
        class="ecl-ordered-list"
      >
        <li
          class="ecl-ordered-list__item"
        >
          Investment Plan for Europe: the Juncker Plan
        </li>
        <li
          class="ecl-ordered-list__item"
        >
          European Semester
        </li>
      </ol>
    </li>
    <li
      class="ecl-ordered-list__item"
    >
      Digital single market
    </li>
    <li
      class="ecl-ordered-list__item"
    >
      Energy union and climate
      <ol
        class="ecl-ordered-list"
      >
        <li
          class="ecl-ordered-list__item"
        >
          Security, solidarity and trust
        </li>
        <li
          class="ecl-ordered-list__item"
        >
          A fully-integrated internal energy market
        </li>
        <li
          class="ecl-ordered-list__item"
        >
          Energy efficiency
        </li>
      </ol>
    </li>
  </ol>
</test>
`;

exports[`EC - Ordered list Default renders correctly with extra attributes 1`] = `
<test>
  <ol
    class="ecl-ordered-list"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <li
      class="ecl-ordered-list__item"
    >
      Jobs, growth and investment
      <ol
        class="ecl-ordered-list"
      >
        <li
          class="ecl-ordered-list__item"
        >
          Investment Plan for Europe: the Juncker Plan
        </li>
        <li
          class="ecl-ordered-list__item"
        >
          European Semester
        </li>
      </ol>
    </li>
    <li
      class="ecl-ordered-list__item"
    >
      Digital single market
    </li>
    <li
      class="ecl-ordered-list__item"
    >
      Energy union and climate
      <ol
        class="ecl-ordered-list"
      >
        <li
          class="ecl-ordered-list__item"
        >
          Security, solidarity and trust
        </li>
        <li
          class="ecl-ordered-list__item"
        >
          A fully-integrated internal energy market
        </li>
        <li
          class="ecl-ordered-list__item"
        >
          Energy efficiency
        </li>
      </ol>
    </li>
  </ol>
</test>
`;

exports[`EC - Ordered list Default renders correctly with extra class names 1`] = `
<test>
  <ol
    class="ecl-ordered-list custom-class custom-class--test"
  >
    <li
      class="ecl-ordered-list__item"
    >
      Jobs, growth and investment
      <ol
        class="ecl-ordered-list"
      >
        <li
          class="ecl-ordered-list__item"
        >
          Investment Plan for Europe: the Juncker Plan
        </li>
        <li
          class="ecl-ordered-list__item"
        >
          European Semester
        </li>
      </ol>
    </li>
    <li
      class="ecl-ordered-list__item"
    >
      Digital single market
    </li>
    <li
      class="ecl-ordered-list__item"
    >
      Energy union and climate
      <ol
        class="ecl-ordered-list"
      >
        <li
          class="ecl-ordered-list__item"
        >
          Security, solidarity and trust
        </li>
        <li
          class="ecl-ordered-list__item"
        >
          A fully-integrated internal energy market
        </li>
        <li
          class="ecl-ordered-list__item"
        >
          Energy efficiency
        </li>
      </ol>
    </li>
  </ol>
</test>
`;

exports[`EC - Ordered list Default with missing input data and debug enabled returns the right warning message 1`] = `
<test>
  <ol
    class="ecl-ordered-list"
  >
    <li
      class="ecl-ordered-list__item"
    >
      Jobs, growth and investment
      <ol
        class="ecl-ordered-list"
      >
        <li
          class="ecl-ordered-list__item"
        >
          Investment Plan for Europe: the Juncker Plan
        </li>
        <li
          class="ecl-ordered-list__item"
        >
          European Semester
        </li>
      </ol>
    </li>
    <li
      class="ecl-ordered-list__item"
    />
    <li
      class="ecl-ordered-list__item"
    >
      Energy union and climate
      <ol
        class="ecl-ordered-list"
      >
        <li
          class="ecl-ordered-list__item"
        >
          Security, solidarity and trust
        </li>
        <li
          class="ecl-ordered-list__item"
        >
          A fully-integrated internal energy market
        </li>
        <li
          class="ecl-ordered-list__item"
        >
          Energy efficiency
        </li>
      </ol>
    </li>
  </ol>
  <!-- ecl2-compliance: ordered-list -->
  <div
    class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
  >
    <p
      class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
    >
      [ordered-list] -  Each item in the {{ items }} array should have a {{ label }} property set and filled in.
    </p>
  </div>
</test>
`;
